maslows hierachy image

--- a/pages/mental_health.html
+++ b/pages/mental_health.html
@@ -226,15 +226,15 @@
             </div>
             <div class="box2" style="text-align: center;">
                 <img 
-                              src="./img/grounding-technique.png" 
-                              alt="The 5-4-3-2-1 groudning technique: 
-                                   Acknowledge 5 things you can see around. 
-                                   Aknowledge 4 things that you can tough around you. 
-                                   Acknowledge 3 things you can hear around you. 
-                                   Acknowledge 2 things you can smell around you. 
-                                   Acknowledge 1 thing you can taste." 
-                              height="350em"
-                              />
+                    src="./img/grounding-technique.png" 
+                    alt="The 5-4-3-2-1 groudning technique: 
+                          Acknowledge 5 things you can see around. 
+                          Aknowledge 4 things that you can tough around you. 
+                          Acknowledge 3 things you can hear around you. 
+                          Acknowledge 2 things you can smell around you. 
+                          Acknowledge 1 thing you can taste." 
+                    height="350em"
+                    />
             </div>
         </div>
 
@@ -247,15 +247,31 @@
             Sometimes something as simple as focusing on breathing can help. I know it sounds silly at first, give it a try.
         </p>
 
-        <h4>Try journaling</h4>
-        <p>
-            Try journaling your thoughts to get them out of your head and onto paper (:<br>
-            Maslow’s hierarchy of needs shows us that in order to have good mental health, <br>
-            we need our basic needs at the bottom of the pyramid met first.<br>
-            (ex: getting safe housing improves mental health) <br>
-            -See the section on housing & financial help for more resources 
-        </p>
-        <b> *I'm not a therapist, please see a medical professional </b>
+        <div class="flexbox">
+            <div class="box2">
+                <h4>Try journaling</h4>
+                <p>
+                    Try journaling your thoughts to get them out of your head and onto paper (:<br>
+                    Maslow’s hierarchy of needs shows us that in order to have good mental health, <br>
+                    we need our basic needs at the bottom of the pyramid met first.<br>
+                    (ex: getting safe housing improves mental health) <br>
+                    -See the section on housing & financial help for more resources 
+                </p>
+                <b> *I'm not a therapist, please see a medical professional </b>
+            </div>
+            <div class="box2" style="text-align: center;">
+                <img 
+                    src="./img/maslows_hierachy.png" 
+                    alt="Maslows hierachy of needs: 
+                          Lowest level 5: Physiological needs. 
+                          level 4: Safety needs. 
+                          level 3: Love and belonging. 
+                          level 2: Esteem. 
+                          Highest level 1: Self-actualization." 
+                    height="300em"
+                    />
+            </div>
+        </div>
 
     </div>
 </div>
