--- a/social_transitioning.html
+++ b/social_transitioning.html
@@ -231,6 +231,25 @@ let s:crust = "#11111b"
                     </a>
                 </li>
             </ul>
+        </p>
+        <div class="flexbox">
+            <div class="box2" style="text-align: center;">
+                <img 
+                    src="./img/voice_tools_devextras_playstore.png" 
+                    alt="How the App 'Voice Tools' looks inside the Play Store" 
+                    width="80%"
+                    />
+            </div>
+            <div class="box2" style="text-align: center;">
+                <img 
+                    src="./img/voice_tools_ui.png" 
+                    alt="The GUI of the App 'Voice Tools' showing the pitch ranges
+                          associated with male and female voices." 
+                    width="80%"
+                    />
+            </div>
+        </div>
+        <p>
             <i>*You can also turn off the gendered ranges*</i>
         </p>
 
