added links to the trans academy voids channel for cs class

--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -417,6 +417,24 @@
         </p>
         <p>
             We just ended our: Intro to Computer Science class. (we will have more classes in the future)<br>
+            <!-- TODO: review this pongo -->
+            The recordings can be viewed on the
+            <a href="https://www.youtube.com/@transacademyvods">
+                Trans Academy Vods channel
+            </a>.<br>
+            <ul>
+                <li>
+                    <a href="https://www.youtube.com/playlist?list=PL4dUgckgoKuoE5RwSwAG6o_foVklDVVWu">
+                        Intro to CS | Professor Epple
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/playlist?list=PL4dUgckgoKuruPlIxIc_W_24QQhhwTvi3">
+                        Intro to CS | Professor Lucia
+                    </a>
+                </li>
+            </ul>
+            <!-- Review end --> 
             If you want to suggest a class or teacher/professional to teach a class, please fillout a ticket and let us know.
         </p>
         <p>
