fixed link to my discord & did simple todos in html

--- a/homelessness_and_financials.html
+++ b/homelessness_and_financials.html
@@ -529,7 +529,6 @@ let s:crust = "#11111b"
         </p>
         <p>
             We just ended our: Intro to Computer Science class. (we will have more classes in the future)<br>
-            <!-- TODO: review this pongo -->
             The recordings can be viewed on the
             <a href="https://www.youtube.com/@transacademyvods">
                 Trans Academy Vods channel
@@ -546,7 +545,6 @@ let s:crust = "#11111b"
                     </a>
                 </li>
             </ul>
-            <!-- Review end --> 
             If you want to suggest a class or teacher/professional to teach a class, please fillout a ticket and let us know.
         </p>
         <p>
@@ -659,8 +657,7 @@ let s:crust = "#11111b"
                 </li>
                 <li>
                     Black student scholarships:
-                    <!-- TODO: make alphabetical ol --> 
-                    <ol>
+                    <ol type="A">
                         <li>
                             <a href="https://www.scholarships.com/financial-aid/college-scholarships/scholarships-by-type/minority-scholarships/african-american-scholarships">
                                 https://www.scholarships.com/financial-aid/college-scholarships/scholarships-by-type/minority-scholarships/african-american-scholarships
@@ -700,8 +697,8 @@ let s:crust = "#11111b"
         Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
         Technical difficulties? <br>
         Let @Add know on 
-        <a href="discordapp.com/users/245579273052749825">
-            Discord
+        <a href="https://discordapp.com/users/245579273052749825">
+            Discord (add_gaming)
         </a> 
         or 
         <a href="https://x.com/AddGaming2">
