--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@ let s:crust = "#11111b"
                     </li>
                     <ol type="I"> 
                         <li>
-                            <!-- TODO: Syncronize menu items -->
                             <h5 style="margin: 0px;">
                                 <a href="./social_transitioning.html#vocal_training">
                                     Trans academy voice classes
@@ -775,8 +774,8 @@ let s:crust = "#11111b"
         Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
         Technical difficulties? <br>
         Let @Add know on 
-        <a href="discordapp.com/users/245579273052749825">
-            Discord
+        <a href="https://discordapp.com/users/245579273052749825">
+            Discord (add_gaming)
         </a> 
         or 
         <a href="https://x.com/AddGaming2">
