--- a/medically_transitioning.html
+++ b/medically_transitioning.html
@@ -269,8 +269,11 @@ let s:crust = "#11111b"
 
         <h3 id="affording_surgery">Affording surgery</h3>
         <p>
-            <!-- TODO: Link: Experiencing homelessness - How to find health ensurance -->
-            <i>* see our insurance section</i> <br>
+            <i>* see our 
+                <a href="./homelessness_and_financials.html#health_insurances">
+            insurance section
+                </a>
+            </i> <br>
         </p>
 
         <h4 id="grants_for_surgery">Grants for surgery:</h4>
@@ -386,8 +389,8 @@ let s:crust = "#11111b"
         Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
         Technical difficulties? <br>
         Let @Add know on 
-        <a href="discordapp.com/users/245579273052749825">
-            Discord
+        <a href="https://discordapp.com/users/245579273052749825">
+            Discord (add_gaming)
         </a> 
         or 
         <a href="https://x.com/AddGaming2">
