--- a/mental_health.html
+++ b/mental_health.html
@@ -395,8 +395,8 @@ let s:crust = "#11111b"
         Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
         Technical difficulties? <br>
         Let @Add know on 
-        <a href="discordapp.com/users/245579273052749825">
-            Discord
+        <a href="https://discordapp.com/users/245579273052749825">
+            Discord (add_gaming)
         </a> 
         or 
         <a href="https://x.com/AddGaming2">
