--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -417,7 +417,6 @@
         </p>
         <p>
             We just ended our: Intro to Computer Science class. (we will have more classes in the future)<br>
-            <!-- TODO: review this pongo -->
             The recordings can be viewed on the
             <a href="https://www.youtube.com/@transacademyvods">
                 Trans Academy Vods channel
@@ -434,7 +433,6 @@
                     </a>
                 </li>
             </ul>
-            <!-- Review end --> 
             If you want to suggest a class or teacher/professional to teach a class, please fillout a ticket and let us know.
         </p>
         <p>
@@ -547,8 +545,7 @@
                 </li>
                 <li>
                     Black student scholarships:
-                    <!-- TODO: make alphabetical ol --> 
-                    <ol>
+                    <ol type="A">
                         <li>
                             <a href="https://www.scholarships.com/financial-aid/college-scholarships/scholarships-by-type/minority-scholarships/african-american-scholarships">
                                 https://www.scholarships.com/financial-aid/college-scholarships/scholarships-by-type/minority-scholarships/african-american-scholarships
