--- a/pages/medically_transitioning.html
+++ b/pages/medically_transitioning.html
@@ -157,8 +157,11 @@
 
         <h3 id="affording_surgery">Affording surgery</h3>
         <p>
-            <!-- TODO: Link: Experiencing homelessness - How to find health ensurance -->
-            <i>* see our insurance section</i> <br>
+            <i>* see our 
+                <a href="./homelessness_and_financials.html#health_insurances">
+            insurance section
+                </a>
+            </i> <br>
         </p>
 
         <h4 id="grants_for_surgery">Grants for surgery:</h4>
