--- a/social_transitioning.html
+++ b/social_transitioning.html
@@ -368,7 +368,6 @@ let s:crust = "#11111b"
             </li>
         </ul>
 
-        <!-- TODO: what is that? a h3? a h2? a new sections? -->
         <h4 id="guide_for_trans_and_info_for_allies_ca">Canada</h4>
         <p>
             <ul>
@@ -481,8 +480,8 @@ let s:crust = "#11111b"
         Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
         Technical difficulties? <br>
         Let @Add know on 
-        <a href="discordapp.com/users/245579273052749825">
-            Discord
+        <a href="https://discordapp.com/users/245579273052749825">
+            Discord (add_gaming)
         </a> 
         or 
         <a href="https://x.com/AddGaming2">
