--- a/trans_representation.html
+++ b/trans_representation.html
@@ -119,7 +119,6 @@ let s:crust = "#11111b"
             <h2 id="creators_trans_fem">Trans fem creators</h2>
 
             <ul>
-                <!-- TODO: contrapoints, mia mulder, jessy early, philosophy tube, ...? -->
                 <li>
                     Laverne Cox:
                     <a href="https://www.instagram.com/lavernecox/">
@@ -380,8 +379,8 @@ let s:crust = "#11111b"
         Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
         Technical difficulties? <br>
         Let @Add know on 
-        <a href="discordapp.com/users/245579273052749825">
-            Discord
+        <a href="https://discordapp.com/users/245579273052749825">
+            Discord (add_gaming)
         </a> 
         or 
         <a href="https://x.com/AddGaming2">
