--- a/pages/general_lgbt_organizations.html
+++ b/pages/general_lgbt_organizations.html
@@ -72,7 +72,7 @@
             (multiple sites listed there)
         </p>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <h2 id="lgbt_swim_and_under_wear">Swimsuits & Underwear Brands</h2>
 
