--- a/pages/lgbt_friendly_resources.html
+++ b/pages/lgbt_friendly_resources.html
@@ -67,8 +67,8 @@
             </li>
         </ul>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
-        <!-- hot does this second listing differ from the one above? -->
+        <div class="separator"></div>
+        <!-- TODO: hot does this second listing differ from the one above? -->
         <ul>
             <li>
                 <b>Erin’s informed consent doctors worldwide map: </b><br>
