--- a/pages/mental_health.html
+++ b/pages/mental_health.html
@@ -1,6 +1,6 @@
 <div class="readable-div">
     <div class="readable-text">
-    <h1> Mental Health </h1>
+        <h1> Mental Health </h1>
 
         <h2 id="crisis_hotlines"> Crisis Hotlines </h2> 
 
@@ -12,7 +12,7 @@
         </p>
 
         <p>
-            <b>Suicide Prevention Hotlines for our Academy members around the globe</b>:
+            <b>Suicide Prevention Hotlines around the globe</b>:
         </p>
         <ul>
             <li>Algeria: 0021 3983 2000 58</li>
@@ -130,38 +130,60 @@
             <li>Zimbabwe:  080 12 333 333</li>
         </ul>
 
-        <h4> Human Trafficking </h4>
+        <h3 id="human_trafficing_hotlines"> Human Trafficking </h3>
         <p>
-            If you think you may know information about someone being trafficked, please report it immediately at: <a href="https://humantraffickinghotline.org"> https://humantraffickinghotline.org</a> or 1-888-373-7888 <br>
+            If you think you may know information about someone being trafficked, 
+            please report it immediately at: 
+            <a href="https://humantraffickinghotline.org">
+                https://humantraffickinghotline.org
+            </a> 
+            or 1-888-373-7888 <br>
             To learn more about the signs of human and labor trafficking, visit the Polaris Project. <br>
-            For more than a decade, Polaris has assisted thousands of victims and survivors through the U.S. National Human Trafficking Hotline,<br>
-            helped ensure countless traffickers were held accountable and built the largest known U.S. data set on actual trafficking experiences. <br>
-            With the guidance of survivors, Polaris uses that data to improve the way trafficking is identified, how victims and survivors are assisted,<br>
-            and how communities, businesses and governments can prevent human trafficking by transforming the underlying inequities and oppressions that make it possible.<br>
-            <a href="https://polarisproject.org/recognizing-human-trafficking/"> https://polarisproject.org/recognizing-human-trafficking/ </a>
+            For more than a decade, Polaris has assisted thousands of victims and survivors through the U.S. 
+            National Human Trafficking Hotline,<br>
+            helped ensure countless traffickers were held accountable and built the largest known U.S. 
+            data set on actual trafficking experiences. <br>
+            With the guidance of survivors, Polaris uses that data to improve the way trafficking is identified, 
+            how victims and survivors are assisted,<br>
+            and how communities, businesses and governments can prevent human trafficking 
+            by transforming the underlying inequities and oppressions that make it possible.<br>
+            <a href="https://polarisproject.org/recognizing-human-trafficking/">
+                https://polarisproject.org/recognizing-human-trafficking/ 
+            </a>
         </p>
 
-        <h4> Sexual Violence </h4>
+        <h3 id="sexual_violence_hotlines"> Sexual Violence </h3>
         <p>
             RAINN (Rape, Abuse & Incest National Network) is the nation's largest anti-sexual violence organization.<br>
             RAINN created and operates the National Sexual Assault Hotline: <br>
             <b>1-800-656-HOPE (4673)</b><br>
-            You can also find resources and help at <a href="https://www.rainn.org/"> https://www.rainn.org/ </a>
+            You can also find resources and help at 
+            <a href="https://www.rainn.org/">
+                https://www.rainn.org/
+            </a>
         </p>
 
-        <h4> Domestic Violence </h4>
+        <h3 id="domestic_violence_hotlines"> Domestic Violence </h3>
         <p>
             24 hours a day, seven days a week, 365 days a year, the National Domestic Violence Hotline provides essential tools<br>
             and support to help survivors of domestic violence so they can live their lives free of abuse.<br>
-            <a href="https://www.thehotline.org/">https://www.thehotline.org/</a><br>
-            or <b>1-800-799-SAFE (7233)</b><br>
+            <a href="https://www.thehotline.org/">
+                https://www.thehotline.org/
+            </a><br>
+            or 
+            <b>
+                1-800-799-SAFE (7233)
+            </b><br>
         </p>
 
-        <h4> Youth Runaway Crisis lines(US)</h4>
+        <h3 id="runaway_hotlines"> Youth Runaway Crisis lines </h3>
         <p>
             US Call: <b>1-800-RUNAWAY</b> (1-800-786-2929)<br>
             Text:<b>1-800-786-2929</b><br>
-            Live chat & email on website: <a href="https://www.1800runaway.org/youth-teens">https://www.1800runaway.org/youth-teens</a><br>
+            Live chat & email on website: 
+            <a href="https://www.1800runaway.org/youth-teens">
+                https://www.1800runaway.org/youth-teens
+            </a><br>
             You can connect with a trusted, compassionate person who will listen and help you create a plan to address your concerns.
         </p>
 
@@ -169,46 +191,62 @@
             <u><b>Canada</b></u> Runaway hotline: <b>1-800-668-4663</b> Operation Come Home <br>
             Kids Help phone Canada:               <b>1-800-668-6868</b> or text:<b>686868</b><br>
             Canada ages 16-24 can call: <b>416.748.0110</b>. For emergency shelter-Press 0 (zero)<br>
-            <a href="https://yws.on.ca/get-help-now/">https://yws.on.ca/get-help-now/</a><br>
+            <a href="https://yws.on.ca/get-help-now/">
+                https://yws.on.ca/get-help-now/
+            </a><br>
         </p>
 
         <p>
             <u><b>UK</b></u><br>
             Call or text: <b>116 000</b><br>
-            Email: <a href="116000@www.runawayhelpline.org.uk">116000@www.runawayhelpline.org.uk</a> (9am – 11pm).<br>
-            <a href="https://www.runawayhelpline.org.uk/contact-us/#:~:text=If%20you%20require%20support%20please,uk%20(9am%20–%2011pm)">https://www.runawayhelpline.org.uk/contact-us/#:~:text=If%20you%20require%20support%20please,uk%20(9am%20–%2011pm)</a>.<br>
+            Email: 
+            <i>
+                116000@www.runawayhelpline.org.uk
+            </i> 
+            (9am – 11pm).<br>
+            <a href="https://www.runawayhelpline.org.uk/contact-us/#:~:text=If%20you%20require%20support%20please,uk%20(9am%20–%2011pm)">
+                runawayhelpline.org.uk/
+            </a>
+            .<br>
         </p>
 
 
-        <h4> Trans Lifeline’s Hotline </h4>
+        <h3 id="trans_lifeline_hotlines"> Trans Lifeline’s Hotline </h3>
         <p>
-            <b>Trans Lifeline’s Hotline</b> is a peer support phone service run by trans people for our trans and questioning peers.<br>
-            Call if you need someone trans to talk to, even if you’re not in a crisis or if you’re not sure you’re trans.<br>
+            <b>Trans Lifeline’s Hotline</b> 
+            is a peer support phone service run by trans people for our trans and questioning peers.<br>
+            Call if you need someone trans to talk to, 
+            even if you’re not in a crisis or if you’re not sure you’re trans.<br>
             When you call, you’ll speak to a trans/nonbinary peer operator<br>
             Full anonymity and confidentiality<br>
         </p>
         <p>
             <b>US</b>: 877-565-8860<br>
             <b>CA</b>: 877-330-6366<br>
-            <a href="https://translifeline.org/">https://translifeline.org/</a><br>
+            <a href="https://translifeline.org/">
+                translifeline.org/
+            </a><br>
         </p>
         <p>
             <b>Canada</b>:<br>
             “It gets better” Canada Specific Helplines: <br>
-            <a href="https://itgetsbettercanada.org/get-help/">https://itgetsbettercanada.org/get-help/</a><br>
+            <a href="https://itgetsbettercanada.org/get-help/">
+                itgetsbettercanada.org/get-help/
+            </a><br>
             Gender & Sexuality helplines<br>
-            <a href="https://findahelpline.com/countries/ca/topics/gender-sexual-identity">https://findahelpline.com/countries/ca/topics/gender-sexual-identity</a><br>
+            <a href="https://findahelpline.com/countries/ca/topics/gender-sexual-identity">
+                findahelpline.com/gender-sexual-identity
+            </a><br>
         </p>
 
-        <p>
-            ---------------------------------------------------------------------------------------
-        </p>
+        <div class="separator"></div>
+        
         <p>
             You are not alone. It's only together that we can get through the darkness.
             Please reach out to a loved one or a professional. 
         </p>
 
-        <h3 id="basic_coping_skills">Basic Coping Skills</h3>
+        <h2 id="basic_coping_skills">Basic Coping Skills</h2>
         <p>
             <i>I'm not a therapist, please see a medical professional for proper care</i>
         </p>
@@ -216,7 +254,7 @@
 
         <div class="flexbox">
             <div class="box2">
-                <h4>Grounding DBT technique my therapist gave me, "54321"</h4> 
+                <h3 id="54321_grounding_technique">The "54321" Grounding Technique</h3> 
                 <p>
                     This helps me with anxiety and other times I'm overwhelmed.<br>
                     Using your senses helps ground you in reality, 
@@ -226,30 +264,37 @@
             </div>
             <div class="box2" style="text-align: center;">
                 <img 
-                    src="./img/grounding-technique.png" 
-                    alt="The 5-4-3-2-1 groudning technique: 
-                          Acknowledge 5 things you can see around. 
-                          Aknowledge 4 things that you can tough around you. 
-                          Acknowledge 3 things you can hear around you. 
-                          Acknowledge 2 things you can smell around you. 
-                          Acknowledge 1 thing you can taste." 
-                    height="350em"
-                    />
+                              src="./img/grounding-technique.png" 
+                              alt="The 5-4-3-2-1 groudning technique: 
+                                   Acknowledge 5 things you can see around. 
+                                   Aknowledge 4 things that you can tough around you. 
+                                   Acknowledge 3 things you can hear around you. 
+                                   Acknowledge 2 things you can smell around you. 
+                                   Acknowledge 1 thing you can taste." 
+                              height="350em"
+                              />
             </div>
         </div>
 
-        <h4>Anxiety breathing techniques </h4>
+        <h3 id="anxiety_breathing_techniques"> Anxiety breathing techniques </h3>
 
         <p>
-            Breathe in, hold, breathe out: <a href="https://tenor.com/view/anxiety-panic-attack-gif-15269229">https://tenor.com/view/anxiety-panic-attack-gif-15269229</a><br>
-            Breathe in, image to focus on: <a href="https://tenor.com/view/anxiety-gif-25537730">https://tenor.com/view/anxiety-gif-25537730</a><br>
+            Breathe in, hold, breathe out:
+            <a href="./img/anxiety_breathing.gif">
+                Breaving execise gif
+            </a><br>
+            Breathe in, image to focus on: 
+            <a href="./img/anxiety_breathing_2.gif">
+                Breaving focus gif
+            </a><br>
             This is a breathing technique that is helpful for anxiety. <br>
-            Sometimes something as simple as focusing on breathing can help. I know it sounds silly at first, give it a try.
+            Sometimes something as simple as focusing on breathing can help. 
+            I know it sounds silly at first, give it a try.
         </p>
 
         <div class="flexbox">
             <div class="box2">
-                <h4>Try journaling</h4>
+                <h3 id="journaling">Journaling</h3>
                 <p>
                     Try journaling your thoughts to get them out of your head and onto paper (:<br>
                     Maslow’s hierarchy of needs shows us that in order to have good mental health, <br>
@@ -261,15 +306,15 @@
             </div>
             <div class="box2" style="text-align: center;">
                 <img 
-                    src="./img/maslows_hierachy.png" 
-                    alt="Maslows hierachy of needs: 
-                          Lowest level 5: Physiological needs. 
-                          level 4: Safety needs. 
-                          level 3: Love and belonging. 
-                          level 2: Esteem. 
-                          Highest level 1: Self-actualization." 
-                    height="300em"
-                    />
+                              src="./img/maslows_hierachy.png" 
+                              alt="Maslows hierachy of needs: 
+                                   Lowest level 5: Physiological needs. 
+                                   level 4: Safety needs. 
+                                   level 3: Love and belonging. 
+                                   level 2: Esteem. 
+                                   Highest level 1: Self-actualization." 
+                              height="300em"
+                              />
             </div>
         </div>
 
