--- a/homelessness_and_financials.html
+++ b/homelessness_and_financials.html
@@ -4,40 +4,40 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Homelessness And Financials</title>
-<!--
-let s:rosewater = "#ffdbd2"
-let s:flamingo = "#ffc0c0"
-let s:pink = "#ffb8eb"
-let s:mauve = "#ca9eff"
-let s:red = "#f985a5"
-let s:maroon = "#f497a7"
-let s:peach = "#fcb385"
-let s:yellow = "#fde3ab"
-let s:green = "#93f88c"
-let s:teal = "#59f8db"
-let s:sky = "#84eafa"
-let s:sapphire = "#56c6fb"
-let s:blue = "#75aaff"
-let s:dark_blue = "#436597"
-let s:bright_blue = "#9ac9fa"
-let s:lavender = "#99a4ff"
+        <!--
+            let s:rosewater = "#ffdbd2"
+            let s:flamingo = "#ffc0c0"
+            let s:pink = "#ffb8eb"
+            let s:mauve = "#ca9eff"
+            let s:red = "#f985a5"
+            let s:maroon = "#f497a7"
+            let s:peach = "#fcb385"
+            let s:yellow = "#fde3ab"
+            let s:green = "#93f88c"
+            let s:teal = "#59f8db"
+            let s:sky = "#84eafa"
+            let s:sapphire = "#56c6fb"
+            let s:blue = "#75aaff"
+            let s:dark_blue = "#436597"
+            let s:bright_blue = "#9ac9fa"
+            let s:lavender = "#99a4ff"
 
-let s:text = "#f8f8f8"
-let s:subtext1 = "#bac2de"
-let s:subtext0 = "#a6adc8"
-let s:overlay2 = "#9697a5"
-let s:overlay1 = "#777a8b"
-let s:overlay0 = "#5f6270"
-let s:surface2 = "#585b70"
-let s:surface1 = "#45475a"
-let s:surface0 = "#313244"
-let s:underlay0 = "#2c2c30"
+            let s:text = "#f8f8f8"
+            let s:subtext1 = "#bac2de"
+            let s:subtext0 = "#a6adc8"
+            let s:overlay2 = "#9697a5"
+            let s:overlay1 = "#777a8b"
+            let s:overlay0 = "#5f6270"
+            let s:surface2 = "#585b70"
+            let s:surface1 = "#45475a"
+            let s:surface0 = "#313244"
+            let s:underlay0 = "#2c2c30"
 
-let s:base = "#161616"
-let s:mantle = "#181825"
-let s:crust = "#11111b"
--->
-<style>
+            let s:base = "#161616"
+            let s:mantle = "#181825"
+            let s:crust = "#11111b"
+        -->
+        <style>
 .readable-div {
     display: flex;
     flex-direction: column;
@@ -59,55 +59,66 @@ let s:crust = "#11111b"
 .put-left {
     padding-right: 50%;
 }
-@media (max-aspect-ratio: 1/1) {
-    .flexbox {
-        flex-direction: column;
-        align-items: center;
-    }
-    .box2 {
-        display: block;
-        width: 80%;
-        margin: auto;
-    }
-    .put-left {
-        padding-right: 0%;
-    }
+.separator {
+    width: 100%; 
+    height: 1px; 
+    background-color: #f8f8f8;
 }
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #161616;
-        color: #f8f8f8;
-    }
-    a:link {
-        color: #75aaff;       
-        text-decoration: none;
-    }
-    a:visited {
-        color: #99a4ff;       
-        text-decoration: none;
-    }
-    a:hover {
-        text-decoration: underline;
-    }
-}
-@media (prefers-color-scheme: light) {
-    body {
-        background-color: #f8f8f8;
-        color: #11111b;
-    }
-    a:link {
-        color: #2660b4;       
-        text-decoration: none;
-    }
-    a:visited {
-        color: #593e9c;       
-        text-decoration: none;
-    }
-    a:hover {
-        text-decoration: underline;
-    }
-}
-</style>
+        @media (max-aspect-ratio: 1/1) {
+            .flexbox {
+                flex-direction: column;
+                align-items: center;
+            }
+            .box2 {
+                display: block;
+                width: 80%;
+                margin: auto;
+            }
+            .put-left {
+                padding-right: 0%;
+            }
+        }
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #161616;
+                color: #f8f8f8;
+            }
+            a:link {
+                color: #75aaff;       
+                text-decoration: none;
+            }
+            a:visited {
+                color: #99a4ff;       
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+            .separator {
+                background-color: #f8f8f8;
+            }
+        }
+        @media (prefers-color-scheme: light) {
+            body {
+                background-color: #f8f8f8;
+                color: #11111b;
+            }
+            a:link {
+                color: #2660b4;       
+                text-decoration: none;
+            }
+            a:visited {
+                color: #593e9c;       
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+            .separator {
+                background-color: #11111b;
+            }
+        }
+        </style>
     </head>
     <body>
 <div class="readable-div">
@@ -160,13 +171,13 @@ let s:crust = "#11111b"
             </li>
         </ul>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <p>
             Asylum & refugees (based in Austria): <a href="https://queerbase.at/before-your-flight/">https://queerbase.at/before-your-flight/</a>
         </p>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <p>
             What is Asylum vs Refugees? <br>
@@ -181,7 +192,7 @@ let s:crust = "#11111b"
             </a>
         </p>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <h2>US</h2>
 
@@ -689,7 +700,7 @@ let s:crust = "#11111b"
         </p>
     </div>
 </div>
-<div style="border-style: solid; boder-width: 1%"></div>
+<div class="separator" style="height: 0.3em"></div>
 
 <div class="readable-div">
     <p style="text-align: center;">
