--- a/pages/bipoc_resources.html
+++ b/pages/bipoc_resources.html
@@ -58,7 +58,7 @@
             </li>
         </ul>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <h3 id="bipoc_asia_pacific">Asian & Pacific Islander Resources for LGBT</h3>
 
