--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -48,13 +48,13 @@
             </li>
         </ul>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <p>
             Asylum & refugees (based in Austria): <a href="https://queerbase.at/before-your-flight/">https://queerbase.at/before-your-flight/</a>
         </p>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <p>
             What is Asylum vs Refugees? <br>
@@ -69,7 +69,7 @@
             </a>
         </p>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <h2>US</h2>
 
