--- a/pages/index.html
+++ b/pages/index.html
@@ -20,8 +20,73 @@
                     <ol type="I"> 
                         <li>
                             <h5 style="margin: 0px;">
-                                <a href="./mental_health.html#basic_coping_skills">
-                                    Coping skills
+                                <a href="./mental_health.html#suicide_prevention_hotlines">
+                                    Suicide Prevention Hotlines
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#human_trafficing_hotlines">
+                                    Human Trafficking
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#sexual_violence_hotlines">
+                                    Sexual Violence
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#domestic_violence_hotlines">
+                                    Domestic Violence
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#runaway_hotlines">
+                                    Youth Runaway Crisis lines
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#trans_lifeline_hotlines">
+                                    Trans Lifeline’s Hotline
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
+                    <li>
+                        <h4 style="margin: 0px;">
+                            <a href="./mental_health.html#basic_coping_skills">
+                                Basic Coping Skills
+                            </a>
+                        </h4>
+                    </li>
+                    <ol>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#54321_grounding_technique">
+                                    The "54321" Grounding Technique
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#anxiety_breathing_techniques">
+                                    Anxiety breathing techniques
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./mental_health.html#journaling">
+                                    Journaling
                                 </a>
                             </h5>
                         </li>
