--- a/pages/legal_help_for_lgbt.html
+++ b/pages/legal_help_for_lgbt.html
@@ -96,7 +96,7 @@
             if they give you issues you can file discrimination claims with any of the legal teams listed above. 
         </p>
 
-        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div class="separator"></div>
 
         <h2 id="legal_uk">UK</h2>
 
