--- a/homelessness_and_financials.html
+++ b/homelessness_and_financials.html
@@ -5,23 +5,7 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Homelessness And Financials</title>
         <!--
-            let s:rosewater = "#ffdbd2"
-            let s:flamingo = "#ffc0c0"
-            let s:pink = "#ffb8eb"
-            let s:mauve = "#ca9eff"
-            let s:red = "#f985a5"
-            let s:maroon = "#f497a7"
-            let s:peach = "#fcb385"
             let s:yellow = "#fde3ab"
-            let s:green = "#93f88c"
-            let s:teal = "#59f8db"
-            let s:sky = "#84eafa"
-            let s:sapphire = "#56c6fb"
-            let s:blue = "#75aaff"
-            let s:dark_blue = "#436597"
-            let s:bright_blue = "#9ac9fa"
-            let s:lavender = "#99a4ff"
-
             let s:text = "#f8f8f8"
             let s:subtext1 = "#bac2de"
             let s:subtext0 = "#a6adc8"
@@ -32,7 +16,6 @@
             let s:surface1 = "#45475a"
             let s:surface0 = "#313244"
             let s:underlay0 = "#2c2c30"
-
             let s:base = "#161616"
             let s:mantle = "#181825"
             let s:crust = "#11111b"
@@ -123,7 +106,7 @@
     <body>
 <div class="readable-div">
     <div class="readable-text">
-    <h1 id="homelessness_and_financials">Experiencing risk of homelessness, lack of food, or other financial needs?</h1>
+    <h1 id="homelessness_and_financials">Homelessness, lack of Food, Asylum and Refugees & financial needs</h1>
 
         <h2 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (refugees and asylum seekers)</h2>
 
