--- a/index.html
+++ b/index.html
@@ -5,23 +5,7 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Worldwide LGBT Resources</title>
         <!--
-            let s:rosewater = "#ffdbd2"
-            let s:flamingo = "#ffc0c0"
-            let s:pink = "#ffb8eb"
-            let s:mauve = "#ca9eff"
-            let s:red = "#f985a5"
-            let s:maroon = "#f497a7"
-            let s:peach = "#fcb385"
             let s:yellow = "#fde3ab"
-            let s:green = "#93f88c"
-            let s:teal = "#59f8db"
-            let s:sky = "#84eafa"
-            let s:sapphire = "#56c6fb"
-            let s:blue = "#75aaff"
-            let s:dark_blue = "#436597"
-            let s:bright_blue = "#9ac9fa"
-            let s:lavender = "#99a4ff"
-
             let s:text = "#f8f8f8"
             let s:subtext1 = "#bac2de"
             let s:subtext0 = "#a6adc8"
@@ -32,7 +16,6 @@
             let s:surface1 = "#45475a"
             let s:surface0 = "#313244"
             let s:underlay0 = "#2c2c30"
-
             let s:base = "#161616"
             let s:mantle = "#181825"
             let s:crust = "#11111b"
@@ -240,7 +223,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./social_transitioning.html#vocal_training">
-                                Voice Training
+                                Vocal Training
                             </a>
                         </h4>
                     </li>
@@ -248,14 +231,14 @@
                         <li>
                             <h5 style="margin: 0px;">
                                 <a href="./social_transitioning.html#vocal_training">
-                                    Trans academy voice classes
+                                    Voice training resource list
                                 </a>
                             </h5>
                         </li>
                         <li>
                             <h5 style="margin: 0px;">
-                                <a href="./social_transitioning.html#vocal_training">
-                                    Voice training resource list
+                                <a href="./social_transitioning.html#voice_tips_and_tricks">
+                                    Voice tips and tricks
                                 </a>
                             </h5>
                         </li>
@@ -288,19 +271,28 @@
                             </a>
                         </h4>
                     </li>
-                    <li>
-                        <h4 style="margin: 0px;">
-                            <a href="./homelessness_and_financials.html">
-                                Help navigating Homelessness & financial concerns
-                            </a>
-                        </h4>
-                    </li>
+                    <ol type="I"> 
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./social_transitioning.html#guide_for_trans_and_info_for_allies_ca">
+                                    Canada
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./social_transitioning.html#guide_for_trans_and_info_for_allies_support">
+                                    Support groups
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                 </ol>
             </li>
             <li>
                 <h3 style="margin: 0px;">
                     <a href="./homelessness_and_financials.html#worldwide_housing_refugees_and_asylum">
-                        Asylum and refugees, worldwide getting to safety
+                        Homelessness, lack of Food, Asylum and Refugees & financial needs
                     </a>
                 </h3>
                 <ol type="A"> 
