--- a/mental_health.html
+++ b/mental_health.html
@@ -5,23 +5,7 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Mental Health</title>
         <!--
-            let s:rosewater = "#ffdbd2"
-            let s:flamingo = "#ffc0c0"
-            let s:pink = "#ffb8eb"
-            let s:mauve = "#ca9eff"
-            let s:red = "#f985a5"
-            let s:maroon = "#f497a7"
-            let s:peach = "#fcb385"
             let s:yellow = "#fde3ab"
-            let s:green = "#93f88c"
-            let s:teal = "#59f8db"
-            let s:sky = "#84eafa"
-            let s:sapphire = "#56c6fb"
-            let s:blue = "#75aaff"
-            let s:dark_blue = "#436597"
-            let s:bright_blue = "#9ac9fa"
-            let s:lavender = "#99a4ff"
-
             let s:text = "#f8f8f8"
             let s:subtext1 = "#bac2de"
             let s:subtext0 = "#a6adc8"
@@ -32,7 +16,6 @@
             let s:surface1 = "#45475a"
             let s:surface0 = "#313244"
             let s:underlay0 = "#2c2c30"
-
             let s:base = "#161616"
             let s:mantle = "#181825"
             let s:crust = "#11111b"
@@ -131,7 +114,10 @@
 
         <p>
             <b><u>USA</u> National Suicide Prevention Hotline</b>: <i>988</i> <br>
-            There is also a 24-hour chat at <a href="https://suicidepreventionlifeline.org/chat/">https://suicidepreventionlifeline.org/chat/</a> 
+            There is also a 24-hour chat at 
+            <a href="https://suicidepreventionlifeline.org/chat/">
+                suicidepreventionlifeline.org
+            </a> 
         </p>
 
         <p>
@@ -231,11 +217,15 @@
                 <ul>
                     <li>
                         MOHW Suicide Prevention Line (衛生福利部)<br>
-                        <a href="https://www.mohw.gov.tw/cp-16-48244-1.html">https://www.mohw.gov.tw/cp-16-48244-1.html</a>
+                        <a href="https://www.mohw.gov.tw/cp-16-48244-1.html">
+                            www.mohw.gov.tw/
+                        </a>
                     </li>
                     <li>
                         Lifeline:<br>
-                        <a href="http://www.life1995.org.tw/">http://www.life1995.org.tw/</a>
+                        <a href="http://www.life1995.org.tw/">
+                            www.life1995.org.tw/
+                        </a>
                     </li>
                 </ul>
             </li>
@@ -258,7 +248,7 @@
             If you think you may know information about someone being trafficked, 
             please report it immediately at: 
             <a href="https://humantraffickinghotline.org">
-                https://humantraffickinghotline.org
+                humantraffickinghotline.org
             </a> 
             or 1-888-373-7888 <br>
             To learn more about the signs of human and labor trafficking, visit the Polaris Project. <br>
@@ -271,7 +261,7 @@
             and how communities, businesses and governments can prevent human trafficking 
             by transforming the underlying inequities and oppressions that make it possible.<br>
             <a href="https://polarisproject.org/recognizing-human-trafficking/">
-                https://polarisproject.org/recognizing-human-trafficking/ 
+                polarisproject.org/
             </a>
         </p>
 
@@ -282,7 +272,7 @@
             <b>1-800-656-HOPE (4673)</b><br>
             You can also find resources and help at 
             <a href="https://www.rainn.org/">
-                https://www.rainn.org/
+                rainn.org/
             </a>
         </p>
 
@@ -291,7 +281,7 @@
             24 hours a day, seven days a week, 365 days a year, the National Domestic Violence Hotline provides essential tools<br>
             and support to help survivors of domestic violence so they can live their lives free of abuse.<br>
             <a href="https://www.thehotline.org/">
-                https://www.thehotline.org/
+                thehotline.org/
             </a><br>
             or 
             <b>
@@ -305,7 +295,7 @@
             Text:<b>1-800-786-2929</b><br>
             Live chat & email on website: 
             <a href="https://www.1800runaway.org/youth-teens">
-                https://www.1800runaway.org/youth-teens
+                1800runaway.org/youth-teens
             </a><br>
             You can connect with a trusted, compassionate person who will listen and help you create a plan to address your concerns.
         </p>
@@ -315,7 +305,7 @@
             Kids Help phone Canada:               <b>1-800-668-6868</b> or text:<b>686868</b><br>
             Canada ages 16-24 can call: <b>416.748.0110</b>. For emergency shelter-Press 0 (zero)<br>
             <a href="https://yws.on.ca/get-help-now/">
-                https://yws.on.ca/get-help-now/
+                yws.on.ca/get-help-now/
             </a><br>
         </p>
 
