--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -1,6 +1,6 @@
 <div class="readable-div">
     <div class="readable-text">
-    <h1 id="homelessness_and_financials">Experiencing risk of homelessness, lack of food, or other financial needs?</h1>
+    <h1 id="homelessness_and_financials">Homelessness, lack of Food, Asylum and Refugees & financial needs</h1>
 
         <h2 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (refugees and asylum seekers)</h2>
 
