--- a/pages/index.html
+++ b/pages/index.html
@@ -117,7 +117,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./social_transitioning.html#vocal_training">
-                                Voice Training
+                                Vocal Training
                             </a>
                         </h4>
                     </li>
@@ -125,14 +125,14 @@
                         <li>
                             <h5 style="margin: 0px;">
                                 <a href="./social_transitioning.html#vocal_training">
-                                    Trans academy voice classes
+                                    Voice training resource list
                                 </a>
                             </h5>
                         </li>
                         <li>
                             <h5 style="margin: 0px;">
-                                <a href="./social_transitioning.html#vocal_training">
-                                    Voice training resource list
+                                <a href="./social_transitioning.html#voice_tips_and_tricks">
+                                    Voice tips and tricks
                                 </a>
                             </h5>
                         </li>
@@ -165,19 +165,28 @@
                             </a>
                         </h4>
                     </li>
-                    <li>
-                        <h4 style="margin: 0px;">
-                            <a href="./homelessness_and_financials.html">
-                                Help navigating Homelessness & financial concerns
-                            </a>
-                        </h4>
-                    </li>
+                    <ol type="I"> 
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./social_transitioning.html#guide_for_trans_and_info_for_allies_ca">
+                                    Canada
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./social_transitioning.html#guide_for_trans_and_info_for_allies_support">
+                                    Support groups
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                 </ol>
             </li>
             <li>
                 <h3 style="margin: 0px;">
                     <a href="./homelessness_and_financials.html#worldwide_housing_refugees_and_asylum">
-                        Asylum and refugees, worldwide getting to safety
+                        Homelessness, lack of Food, Asylum and Refugees & financial needs
                     </a>
                 </h3>
                 <ol type="A"> 
