--- a/medically_transitioning.html
+++ b/medically_transitioning.html
@@ -21,89 +21,230 @@
             let s:crust = "#11111b"
         -->
         <style>
-.readable-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 90%;
-    margin: auto;
-}
-.readable-text {
-    max-width: 120ch;
-    margin: auto;
-}
-.flexbox {
-    display: flex;
-    justify-content: space-between;
-}
-.box2 {
-    width: 50%;
-}
-.put-left {
-    padding-right: 50%;
-}
-.separator {
-    width: 100%; 
-    height: 1px; 
-    background-color: #f8f8f8;
-}
-        @media (max-aspect-ratio: 1/1) {
-            .flexbox {
-                flex-direction: column;
-                align-items: center;
-            }
-            .box2 {
-                display: block;
-                width: 80%;
-                margin: auto;
-            }
-            .put-left {
-                padding-right: 0%;
-            }
+        .readable-div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            max-width: 90%;
+            margin: auto;
+            margin-left: 25%; /* sidebar */
         }
-        @media (prefers-color-scheme: dark) {
-            body {
-                background-color: #161616;
-                color: #f8f8f8;
-            }
-            a:link {
-                color: #75aaff;       
-                text-decoration: none;
-            }
-            a:visited {
-                color: #99a4ff;       
-                text-decoration: none;
-            }
-            a:hover {
-                text-decoration: underline;
-            }
-            .separator {
-                background-color: #f8f8f8;
-            }
+        .readable-text {
+            max-width: 120ch;
+            margin: auto;
         }
-        @media (prefers-color-scheme: light) {
-            body {
-                background-color: #f8f8f8;
-                color: #11111b;
-            }
-            a:link {
-                color: #2660b4;       
-                text-decoration: none;
-            }
-            a:visited {
-                color: #593e9c;       
-                text-decoration: none;
-            }
-            a:hover {
-                text-decoration: underline;
-            }
-            .separator {
-                background-color: #11111b;
-            }
+        .flexbox {
+            display: flex;
+            justify-content: space-between;
         }
+        .box2 {
+            width: 50%;
+        }
+        .put-left {
+            padding-right: 50%;
+        }
+        .separator {
+            width: 100%; 
+            height: 1px; 
+            background-color: #f8f8f8;
+        }
+        .separator-foot {
+            width: 80%; /* sidebar */
+            margin-left: 20%; /* sidebar */
+            height: 0.3em; 
+            background-color: #f8f8f8;
+        }
+        .sidebar {
+            height: 100%;
+            width: 20%;
+            z-index: 1;
+            position: fixed;
+            top: 0;
+            left: 0;
+            border-right-style: solid;
+            border-width: 1px;
+            border-color: #161616;
+        }
+        .sidebar ul {
+            list-style: none; 
+            margin: 1em 0em; 
+            padding: 0px;
+        }
+        .sidebar li {
+            padding: 0.5em 2em;
+        }
+            @media (max-aspect-ratio: 1/1) {
+                .readable-div {
+                    margin-left: 5%;
+                }
+                .flexbox {
+                    flex-direction: column;
+                    align-items: center;
+                }
+                .box2 {
+                    display: block;
+                    width: 80%;
+                    margin: auto;
+                }
+                .separator-foot {
+                    width: 100%;
+                    margin-left: 0%;
+                }
+                .put-left {
+                    padding-right: 0%;
+                }
+                .sidebar {
+                    display: none;
+                }
+            }
+            @media (prefers-color-scheme: dark) {
+                body {
+                    background-color: #161616;
+                    color: #f8f8f8;
+                }
+                a:link {
+                    color: #75aaff;       
+                    text-decoration: none;
+                }
+                a:visited {
+                    color: #99a4ff;       
+                    text-decoration: none;
+                }
+                a:hover {
+                    text-decoration: underline;
+                }
+                .separator {
+                    background-color: #f8f8f8;
+                }
+                .separator-foot {
+                    background-color: #f8f8f8;
+                }
+                .sidebar {
+                    border-color: #f8f8f8;
+                }
+                .sidebar a {
+                    color: #f8f8f8;
+                }
+                .sidebar li:hover {
+                    text-decoration: underline;
+                    outline-style: solid;
+                    outline-width: 1px;
+                    outline-color: #f8f8f8;
+                }
+            }
+            @media (prefers-color-scheme: light) {
+                body {
+                    background-color: #f8f8f8;
+                    color: #11111b;
+                }
+                a:link {
+                    color: #2660b4;       
+                    text-decoration: none;
+                }
+                a:visited {
+                    color: #593e9c;       
+                    text-decoration: none;
+                }
+                a:hover {
+                    text-decoration: underline;
+                }
+                .separator {
+                    background-color: #11111b;
+                }
+                .separator-foot {
+                    background-color: #11111b;
+                }
+                .sidebar {
+                    border-color: #161616;
+                }
+                .sidebar a {
+                    color: #11111b;
+                }
+                .sidebar li:hover {
+                    text-decoration: underline;
+                    outline-style: solid;
+                    outline-width: 1px;
+                    outline-color: #11111b;
+                }
+            }
         </style>
     </head>
     <body>
+<div class="sidebar">
+    <ul>
+        <li>
+            <a href="./mental_health.html">
+                Mental Health
+            </a>
+        </li>
+        <li>
+            <a href="./social_transitioning.html">
+                Socially Transitioning
+            </a>
+        </li>
+        <li>
+            <a href="./homelessness_and_financials.html#worldwide_housing_refugees_and_asylum">
+                Homelessness, lack of Food, Asylum and Refugees & financial needs
+            </a>
+        </li>
+        <li>
+            <a href="./medically_transitioning.html">
+                Medically Transitioning
+            </a> 
+        </li>
+        <li>
+            <a href="./lgbt_friendly_resources.html">
+                Finding an LGBT friendly resource
+            </a> 
+        </li>
+        <li>
+            <a href="./trans_representation.html">
+                Transgender Representation
+            </a>
+        </li>
+        <li>
+            <a href="./legal_help_for_lgbt.html">
+                Legal Help for LGBT
+            </a> 
+        </li>
+        <li>
+            <a href="./general_lgbt_organizations.html">
+                General LGBT organizations
+            </a> 
+        </li>
+        <li>
+            <a href="./trans_masc_resources.html">
+                Trans Masc Specific Resources
+            </a>
+        </li>
+        <li>
+            <a href="./periods.html">
+                Periods
+            </a>
+        </li>
+        <li>
+            <a href="./pregnancy_and_parenting.html">
+                Lgbt Pregnancy and parenting
+            </a>
+        </li>
+        <li>
+            <a href="./trans_fem_resources.html">
+                Trans Fem specific resources
+            </a>
+        </li>
+        <li>
+            <a href="./nonbinary_and_intersex_resources.html">
+                Nonbinary & Intersex specific resources
+            </a>
+        </li>
+        <li>
+
+            <a href="./bipoc_resources.html">
+                BIPOC specific resources
+            </a>
+        </li>
+    </ul>
+</div>
 <div class="readable-div">
     <div class="readable-text">
     <h1>Medically transitioning</h1>
@@ -375,7 +516,7 @@
         </p>
     </div>
 </div>
-<div class="separator" style="height: 0.3em"></div>
+<div class="separator-foot"></div>
 
 <div class="readable-div">
     <p style="text-align: center;">
