--- a/pages/social_transitioning.html
+++ b/pages/social_transitioning.html
@@ -1,6 +1,6 @@
 <div class="readable-div">
     <div class="readable-text">
-    <h1>Socially transitioning</h1>
+        <h1>Socially transitioning</h1>
 
         <p>
             <u>Are you struggling with the concept that you might be transgender?</u> <br>
@@ -36,7 +36,8 @@
         <p>
             Passing means to be perceived as your gender identity and not your sex assigned at birth. <br>
             You can't tell someone is transgender just by looking at them. <br>
-            Passing as cis-gender (not trans) might help people feel more comfortable and safe, and relieve dysphoria.<br>
+            Passing as cis-gender (not trans) might help people feel more comfortable and safe, 
+            and relieve dysphoria.<br>
             It's not necessary to pass, but it is some trans folks’ goal during transition.
         </p>
 
@@ -124,18 +125,18 @@
         <div class="flexbox">
             <div class="box2" style="text-align: center;">
                 <img 
-                    src="./img/voice_tools_devextras_playstore.png" 
-                    alt="How the App 'Voice Tools' looks inside the Play Store" 
-                    width="80%"
-                    />
+                              src="./img/voice_tools_devextras_playstore.png" 
+                              alt="How the App 'Voice Tools' looks inside the Play Store" 
+                              width="80%"
+                              />
             </div>
             <div class="box2" style="text-align: center;">
                 <img 
-                    src="./img/voice_tools_ui.png" 
-                    alt="The GUI of the App 'Voice Tools' showing the pitch ranges
-                          associated with male and female voices." 
-                    width="80%"
-                    />
+                              src="./img/voice_tools_ui.png" 
+                              alt="The GUI of the App 'Voice Tools' showing the pitch ranges
+                                    associated with male and female voices." 
+                              width="80%"
+                              />
             </div>
         </div>
         <p>
